Adding spock and junit4 tests